added better tabview for content selection

--- a/Resources/Private/Templates/Content/Example.html
+++ b/Resources/Private/Templates/Content/Example.html
@@ -9,11 +9,11 @@
 		<flux:form id="toggle">
 
 			<flux:form.sheet name="subheadline" label="Subheadline">
-				<flux:field.input name="settings.subheadline" label="Whatever" enableRichText="1" />
+				<flux:field.input name="settings.subheadline" label="Subheadline" />
 			</flux:form.sheet>
 
 			<flux:form.sheet name="Text" label="Text">
-				<flux:field.text name="settings.teasertext" label="Whatever" enableRichText="1" />
+				<flux:field.text name="settings.teasertext" label="Text" enableRichText="1" />
 			</flux:form.sheet>
 
 		</flux:form>
