--- a/Resources/Private/Templates/Content/Example.html
+++ b/Resources/Private/Templates/Content/Example.html
@@ -24,7 +24,7 @@
 	</f:section>
 
 	<f:section name="Main">
-		<div class="toggle-element">
+		<div class="accordion-toggle">
 			<h2 class="headline">
 				<v:tag name="h{settings.content.settings.header.type -> v:or(alternative: record.header_layout) -> v:or(alternative: settings.header.type)}"
 					   class="{settings.content.settings.header.className}" hideIfEmpty="{settings.content.settings.header.hideIfEmpty -> v:or(alternative: 1)}">
@@ -37,17 +37,19 @@
 					{record.subheader -> f:format.raw()}
 				</v:tag>
 			</h4>
-
+		</div>
+		<div class="accordion-content">
 			<f:format.html>{settings.teasertext}</f:format.html>
 			<f:if condition="{settings.images}">
 				<div class="toggle-picture">
 					<f:image src="{settings.images}"/>
 				</div>
 			</f:if>
-
 		</div>
 	</f:section>
 </div>
+
+
 
 
 
